--- a/assets/css/text-styles.css
+++ b/assets/css/text-styles.css
@@ -28,7 +28,7 @@ p,
 }
 
 h1 {
-  font-family:var(--brand-font-condensed);
+  font-stretch: condensed;
   color: var(--_text-emphasis, var(--sd-text-emphasis));
   font-weight: 500;
   font-size: 42px;
@@ -56,7 +56,7 @@ h1 {
 }
 
 h2 {
-  font-family:var(--brand-font-condensed);
+  font-stretch: condensed;
   color: var(--_text-emphasis, var(--sd-text-emphasis));
   font-weight: 500;
   font-size: 30px;
@@ -81,7 +81,7 @@ h2 {
 h3 {
   font-family: var(--brand-font);
   font-weight: 500;
-  font-family:var(--brand-font-condensed);
+  font-stretch: condensed;
   font-size: 26px;
   line-height: 1.125;
   text-transform: uppercase;
@@ -111,7 +111,7 @@ h4 {
 }
 h5 {
   font-weight: 500;
-  font-family:var(--brand-font-condensed);
+  font-stretch: condensed;
   font-size: 24px;
   line-height: 1.125;
   text-transform: uppercase;
@@ -123,7 +123,7 @@ h5 {
 /* headings */
 .sd-heading-level-2 {
   font-weight: 500;
-  font-family:var(--brand-font-condensed);
+  font-stretch: condensed;
   font-size: 30px;
   line-height: 1.125;
   text-transform: uppercase;
@@ -151,7 +151,7 @@ h5 {
 .sd-heading-level-5 {
   /* font-family: "DIN-CondMed", Arial, sans-serif; */
   font-weight: 500;
-  font-family:var(--brand-font-condensed);
+  font-stretch: condensed;
   font-size: 24px;
   line-height: 1.125;
   text-transform: uppercase;
@@ -267,7 +267,7 @@ ol > li {
   &::before {
     content: counter(item) ".";
     /* font-weight: 500;
-    font-family:var(--brand-font-condensed); */
+    font-stretch: condensed; */
     font-size: 16px;
     position: relative;
     left: -15px;
