--- a/assets/css/lists.css
+++ b/assets/css/lists.css
@@ -1,47 +1,29 @@
-.sd-content {
-  ul,
-  ol {
-    li {
-      --_indicatorSize: 14px;
-      position: relative;
-      text-indent: 0;
-      padding: 0;
-      margin-left: 22px;
-      &:after {
-        content: "";
-        position: absolute;
-        left: -19px;
-        top: 5px;
-        width: var(--_indicatorSize);
-        height: var(--_indicatorSize);
-      }
-    }
-  }
-  .checkmarkList {
-    text-indent: 0;
-    li {
-      --_indicatorSize: 14px;
-      position: relative;
-      text-indent: 0;
-      padding: 0;
-      margin-left: 22px;
-      &:after {
-        content: "";
-        position: absolute;
-        left: -19px;
-        top: 5px;
-        width: var(--_indicatorSize);
-        height: var(--_indicatorSize);
-      }
-    }
-  }
-}
-[class*="light"],
-[class*="neutral"] {
   .sd-content {
-    .checkmarkList {
+    ul {
+      text-indent:0;
       li {
+        --_indicatorSize:14px;
+        position: relative;
+        text-indent:0;
+        padding:0;
+        margin-left:22px;
         &:after {
+          content: "";
+          position: absolute;
+          left:-19px;
+          top: 5px;
+          width: var(--_indicatorSize);
+          height: var(--_indicatorSize);         
+          
+      }
+    }
+  }}
+  [class*="light"],[class*="neutral"] {
+     .sd-content {
+    ul {
+      li {       
+        &:after {
+         
           background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve'  viewBox='0 0 32 32'%3E%3Cpath  fill='%23000000' d='M16 0C7.2 0 0 7.2 0 16s7.2 16 16 16 16-7.2 16-16S24.8 0 16 0zm-2.4 23.5-6.3-6.3 1.8-1.8 4.5 4.5 9.8-9.7 1.8 1.8-11.6 11.5z'/%3E%3C/svg%3E");
         }
       }
@@ -49,65 +31,43 @@
   }
 }
 .sd-surface-dark,
-.sd-surface-darkest {
+.sd-surface-darkest{
   .sd-content {
-    .checkmarkList {
-      li {
+    ul {
+      li {       
         &:after {
+         
           background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve'   viewBox='0 0 32 32'%3E%3Cpath  fill='%23ffffff' d='M16 0C7.2 0 0 7.2 0 16s7.2 16 16 16 16-7.2 16-16S24.8 0 16 0zm-2.4 23.5-6.3-6.3 1.8-1.8 4.5 4.5 9.8-9.7 1.8 1.8-11.6 11.5z'/%3E%3C/svg%3E");
+         
+          
         }
       }
     }
   }
 }
 
+
 .sd-content {
-  .discList {
-    li {
+[style="list-style-type\:\ disc\;"]{
+    li{
       /* color:red; */
-      --_indicatorSize: 5px;
-      margin-left: 0px;
-      padding-left: 10px;
+       --_indicatorSize:5px;
+       margin-left: 0px;
+       padding-left: 10px;
       /* list-style:disc; */
       /* margin-left: 0px; */
-
-      &:after {
-        left: 0;
-        display: block;
-        position: absolute;
-        background-color: currentColor;
+     
+       &:after { 
+         left:0;
+        display:block;
+        position:absolute;
+        background-color:currentColor;
         border-radius: 50%;
         content: "";
         top: 10px;
-      }
-    }
-  }
-}
 
-/* nujmber list */
-.sd-content {
-  .numberList {
-    li {
-      counter-increment: list-item;
-      position: relative;
-      margin-left: 22px;
-      padding-left: 10px;
-      text-indent: 0;
-      /* color:lime; */
-      &:after {
-        background-image:none;
-        background-color: none;
-        content:  counter(list-item) ".";
-        position: absolute;
-        left: -12px;
-        top: 5px;
-        width: 14px;
-        height: 14px;
-        text-align: center;
-        line-height: 14px;
-        border-radius: 50%;
-        color: currentColor;
-      }
+          
+        }
     }
-  }
-}
+
+}}
